# ai-analytics-lib

./: .env.example  README.md  pyproject.toml
examples/: .env.docker  .env.example  Dockerfile.backend  docker-compose.yml  fastapi_app.py  run-docker.sh  simple_sql_chat.py  sql_chat_api.py  test_sql_chat_api.py
examples/sql-chat-frontend/: Dockerfile  package.json  vite.config.ts
examples/sql-chat-frontend/src/: App.tsx  api.ts  types.ts
examples/sql-chat-frontend/src/components/: DatabaseConfig.tsx  QueryInput.tsx  QueryResults.tsx  SchemaViewer.tsx
implementations/fastapi/: .env.docker  .env.example  Dockerfile  README.md  docker-compose.yml  fastapi_app.py  run-docker.sh  sql_chat_api.py  test_sql_chat_api.py
implementations/fastapi/sql-chat-frontend/: Dockerfile  package.json  vite.config.ts
implementations/fastapi/sql-chat-frontend/src/: types.ts
implementations/rails/app/services/: azure_openai_service.rb  bigquery_service.rb
implementations/rails/config/: application.conf  application.rb  cable.yml  routes.rb
implementations/rails/config/environments/: production.rb
sql_chat/: Dockerfile  Gemfile
sql_chat/app/services/: azure_openai_service.rb  bigquery_service.rb
sql_chat/config/: application.conf  application.rb  cable.yml  credentials.yml.enc  database.yml  routes.rb
sql_chat/config/environments/: development.rb  production.rb
sql_chat/config/initializers/: config.rb
src/ai_analytics/: __init__.py  config.py
src/ai_analytics/agents/: __init__.py  base.py  sql_chat.py  text_analysis.py
src/ai_analytics/database/: __init__.py  base.py  bigquery.py  postgres.py
src/ai_analytics/utils/: logging.py
tests/: test_text_analysis.py
(+6 files in other folders)
